--- a/{{cookiecutter.name}}.ipynb
+++ b/{{cookiecutter.name}}.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"{{doc}}\"\"\"\n",
-    "__version__ = \"0.0.1:"
+    "\"\"\"{{cookiecutter.description}}\"\"\"\n",
+    "__version__ = \"{{cookiecutter.version}}\""
    ]
   },
   {
@@ -18,9 +18,9 @@
    "source": [
     "if __name__ == '__main__':\n",
     "    if '__file__' not in locals():\n",
-    "        !jupyter nbconvert --to python --TemplateExporter.exclude_input_prompt=True {{name}}.ipynb\n",
-    "        !black {{name}}.py\n",
-    "        !isort {{name}}.py"
+    "        !jupyter nbconvert --to python --TemplateExporter.exclude_input_prompt=True {{cookiecutter.name}}.ipynb\n",
+    "        !black {{cookiecutter.cookiecutter.name}}.py\n",
+    "        !isort {{cookiecutter.cookiecutter.name}}.py"
    ]
   }
  ],
